# spoon-bot

./: .codex-ws-think-check.yaml  .codex-ws-think-qwen.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANNELS_README.md  Dockerfile  Dockerfile.legacy  Dockerfile.modal  README.md  config.example.yaml  config.yaml  demo_output.txt  docker-compose.yml  docker-entrypoint.sh  modal_config.yaml  modal_spoon_bot.py  pyproject.toml  task_plan.md  test_2048.py  test_dynamic_tools.py  test_skills.py  verify_orchestration.py
.github/workflows/: update-api-docs.yml
docs/: API_DESIGN.md  api.md  multi-session-plan.md
scripts/: generate_api_docs.py  replay_jsonl_ws.py  run_test_suite.py
spoon_bot/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  core.py  defaults.py  exceptions.py  wallet.py
spoon_bot/agent/: __init__.py  context.py  context_snapshot.py  execution_ledger.py  loop.py  loop_protocol.py  loop_skills.py  loop_state.py  request_hints.py  session_compact.py  turn_verifiers.py
spoon_bot/agent/tools/: __init__.py  base.py  cron.py  document.py  execution_context.py  filesystem.py  grep.py  history_search.py  image_gen.py  path_validator.py  registry.py  self_config.py  shell.py  skill_bridge.py  wallet.py  web.py  web3.py
spoon_bot/bus/: __init__.py  events.py  queue.py
spoon_bot/channels/: __init__.py  base.py  cli_channel.py  config.py  delivery.py  manager.py  telegram_channel.py
spoon_bot/channels/discord/: __init__.py  channel.py  constants.py
spoon_bot/channels/feishu/: __init__.py  cards.py  channel.py  constants.py  media.py  policy.py  render.py
spoon_bot/channels/telegram/: __init__.py  callbacks.py  channel.py  commands.py  constants.py  keyboards.py  media_handlers.py
spoon_bot/cron/: __init__.py  executor.py  models.py  run_log.py  schedule.py  service.py  store.py
spoon_bot/gateway/: __init__.py  app.py  client.py  config.py  core_integration.py  errors.py  request_context.py  server.py  workspace_visibility.py
spoon_bot/gateway/api/: health.py  webhooks.py
spoon_bot/gateway/auth/: __init__.py  api_key.py  dependencies.py  jwt.py
spoon_bot/gateway/models/: __init__.py  cron.py  requests.py  responses.py
spoon_bot/gateway/observability/: __init__.py  budget.py  tracing.py
spoon_bot/gateway/websocket/: __init__.py  agent.py  handler.py  manager.py  protocol.py  workspace_fs.py  workspace_terminal.py  workspace_watch.py
spoon_bot/llm/: __init__.py  anthropic.py  base.py  openai.py  spoon_core_provider.py
spoon_bot/mcp/: __init__.py  client.py  spoon_core_mcp.py  tool_adapter.py
spoon_bot/memory/: __init__.py  semantic_store.py  store.py
spoon_bot/runtime/: __init__.py  execution.py  session_registry.py
spoon_bot/services/: __init__.py  daemon.py  git.py  heartbeat.py  hotreload.py  spawn.py
spoon_bot/services/audio/: __init__.py  base.py  factory.py  pipeline.py  streaming.py  utils.py  whisper.py
spoon_bot/session/: __init__.py  manager.py  store.py
spoon_bot/skills/: __init__.py  builtin.py  loader.py  manager.py  models.py  script_tool_patch.py  spoon_core_skills.py  zip_install.py
spoon_bot/subagent/: __init__.py  catalog.py  manager.py  models.py  persistence.py  registry.py  tools.py
spoon_bot/toolkit/: __init__.py  adapter.py
spoon_bot/utils/: __init__.py  errors.py  privacy.py  rate_limit.py  retry.py
test_workspace/: 2048.html  generate_sunset.py  generate_test_report.py
test_workspace/sessions/: default.jsonl  default.meta.json
tests/: __init__.py  capability_test.py  conftest.py  e2e_gateway.py  e2e_gateway_test.py  e2e_gateway_tracing_timeout_real_api.py  e2e_gemini3_test.py  e2e_voice_input.py  simulate_ws_disconnect_scenario.py  test_agent_cron_tool.py  test_agent_real.py  test_agent_unit.py  test_agentloop_chatbot_wiring.py  test_builtin_skills.py  test_catalog_observability.py  test_channel_manager_attachments.py  test_cli_tui_output.py  test_config_and_channels.py  test_config_gemini_provider.py  test_core_reasoning_effort.py  test_cron_cli.py  test_cron_delivery.py  test_cron_executor.py  test_cron_gateway.py  test_cron_schedule.py  test_cron_service.py  test_cron_store.py  test_discord_channel.py  test_discord_e2e_fixes.py  test_docker_runtime.py  test_document.py  test_dynamic_tools_prompt.py  test_e2e_gateway_live.py  test_feishu_channel.py  test_gateway_agent_rest_tracing.py  test_gateway_cancel_propagation.py  test_gateway_execution_budget.py  test_gateway_meta_tracing_response.py  test_gateway_qa_fixes.py  test_gateway_subagent_source.py  (+58 more)
tests/api/: README.md  package-lock.json  package.json  run-tests.sh  spoon-bot-api.test.js
workspace/: hello_world.py
workspace/skills/code_review/: SKILL.md
workspace/skills/coding/: SKILL.md
workspace/skills/document_export/: SKILL.md
workspace/skills/document_summarize/: SKILL.md
workspace/skills/git_helper/: SKILL.md
workspace/skills/image_generate/: SKILL.md
workspace/skills/research/: SKILL.md
(+21 files in other folders)
